fixed spacing on search track artists, added support for back and forward buttons on some pages

--- a/src/components/SearchPageTrack/SearchPageTrack.module.css
+++ b/src/components/SearchPageTrack/SearchPageTrack.module.css
@@ -27,6 +27,10 @@
     color: #aaa;
 }
 
+.trackTwoHoriz p {
+    margin-right: 5px;
+}
+
 .track:hover {
     background-color: #555;
     cursor: pointer;
